@@ -1,0 +1,16 @@
+# _____     ___ ____     ___ ____
+#  ____|   |    ____|   |        | |____|
+# |     ___|   |____ ___|    ____| |    \    PS2DEV Open Source Project.
+#-----------------------------------------------------------------------
+# Copyright 2001-2005, ps2dev - http://www.ps2dev.org
+# Licenced under Academic Free License version 2.0
+# Review ps2sdk README & LICENSE files for further details.
+#
+# $Id: Makefile 1021 2005-04-22 04:56:26Z loser $
+
+
+SAMPLE_DIR = hello
+
+include $(PS2SDKSRC)/Defs.make
+include $(PS2SDKSRC)/samples/Rules.samples
+
